# nixie-clock

./: README.md
firmware/cmake/: gcc_stm32.cmake
firmware/nixie-clock/: .cproject  .custom.cfg  .gdbinit  .gitignore  .mxproject  .project  CMakeLists.txt  README.TXT  STM32F302C8Tx_FLASH.ld  nixie-clock.cfg  nixie-clock.ioc  nixie-clock.xml
firmware/nixie-clock/Inc/: FreeRTOSConfig.h  globals.h  main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h
firmware/nixie-clock/Middlewares/ST/STM32_USB_Device_Library/: CMakeLists.txt
firmware/nixie-clock/Src/: color.c  debug.h  gps.c  gps.h  main.c  nixieDriver.c  nixieDriver.h  pwm.c  pwm.h  rtc.c  rtc.h  spi.c  spi.h  stm32f3xx_hal_msp.c  stm32f3xx_it.c  timezone.c  timezone.h  uart.c  uart3.c  uart3.h  usbd_conf.c
firmware/nixie-clock/inc/: FreeRTOSConfig.h  globals.h  stm32f3xx_hal_conf.h  usb_device.h  usbd_conf.h  usbd_desc.h
firmware/nixie-clock/lib/FreeRTOS/: CMakeLists.txt
firmware/nixie-clock/lib/STM32_USB_Device_Library/: CMakeLists.txt
firmware/nixie-clock/src/: color.c  color.h  gps.c  gps.h  main.c  newlib.c  nixieDriver.c  pwm.c  pwm.h  rtc.c  spi.c  stm32f3xx_it.c  timezone.c  timezone.h  uart.h  usb_device.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
hardware/: .gitignore  radio-clock.bak  radio-clock.lib
hardware/clock/: clock-cache.lib  clock.sch
hardware/main-board/: main-board-cache.lib  main-board.kicad_pcb  main-board.pro  main-board.sch
hardware/preamp/: fp-lib-table  preamp-cache.lib  preamp.kicad_pcb  preamp.pro  preamp.sch
hardware/preamp/wwvb-receiver.pretty/: 1702473.kicad_mod  PJ-002AH-SMT-TR.kicad_mod  TZY2.kicad_mod
hardware/radio-clock.3dshapes/: c-8-188275-0-u-3d.stp  c-8-188275-0-u-3d.wrl  pj-002ah-smt.wrl  sda01h1s.stp  sda01h1s.wrl
hardware/radio-clock.pretty/: 01110501Z.kicad_mod  1-338728-0.kicad_mod  142-0701-801.kicad_mod  7447709101.kicad_mod  8-188275-0.kicad_mod  ABS07.kicad_mod  B82477R4104M100.kicad_mod  DO3316P.kicad_mod  FGPMMOPA6H.kicad_mod  IN-14.kicad_mod  LQFP-44_10x10mm_Pitch0.8mm_Rounded.kicad_mod  PLCC-4.kicad_mod  PLCC-6.kicad_mod  S8411-45R.kicad_mod  SDA01H1SBD.kicad_mod  Symbol_HighVoltage_Type2_SilkscreenTop_VerySmall.kicad_mod  TC2050-IDC.kicad_mod  TL1105SF160Q.kicad_mod
hardware/tube-board/: tube-board-cache.lib  tube-board.kicad_pcb  tube-board.pro  tube-board.sch
mechanical/: .gitignore  Back.ipt  Base1.ipt  Base2.ipt  Bumper.ipt  Cover.ipt  Drawing2mmSheet.dwg  Drawing3mmSheet.dwg  Front.ipt  IN-14.ipt  M3Nut.ipt  M3x25mm.ipt  MainPCB.ipt  NixieClock.dwg  NixieClock.iam  PCB.iam  Side.iam  Spacer1.ipt  Spacer2.ipt  Top.ipt  TubePCB.ipt
