PROJECT(nixie-clock)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ENABLE_LANGUAGE(ASM)

FIND_PACKAGE(CMSIS REQUIRED)
FIND_PACKAGE(STM32HAL REQUIRED)

ADD_SUBDIRECTORY(Middlewares/Third_Party/FreeRTOS)
ADD_SUBDIRECTORY(Middlewares/ST/STM32_USB_Device_Library)

INCLUDE_DIRECTORIES(
    Inc
    ${CMSIS_INCLUDE_DIRS}
    ${STM32HAL_INCLUDE_DIR}
    ${FREERTOS_INCLUDE_DIRS}
    ${STM32_USB_DEV_INCLUDE_DIRS}
)

SET(PROJECT_SOURCES
    Src/gps.c
    Src/main.c
    Src/nixieDriver.c
    Src/stm32f3xx_hal_msp.c
    Src/stm32f3xx_it.c
#    Src/system_stm32f3xx.c
    Src/uart3.c
    Src/usb_device.c
    Src/usbd_cdc_if.c
    Src/usbd_conf.c
    Src/usbd_desc.c
	Src/newlib.c
)

SET(STM32_LINKER_SCRIPT STM32F302C8Tx_FLASH.ld)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}
	${PROJECT_SOURCES}
	${CMSIS_SOURCES}
	${STM32HAL_SOURCES}
	${FREERTOS_SOURCES}
	${STM32_USB_DEV_PROJECT_SOURCES}
)

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME})
STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME})
STM32_PRINT_SIZE_OF_TARGETS(${CMAKE_PROJECT_NAME})
