PROJECT(stm32-usb-dev)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

#FIND_PACKAGE(CMSIS REQUIRED)
#FIND_PACKAGE(STM32HAL REQUIRED)

SET(STM32_USB_DEV_INCLUDE_DIRS
	${CMAKE_CURRENT_SOURCE_DIR}/Core/Inc
	${CMAKE_CURRENT_SOURCE_DIR}/Class/CDC/Inc
)

SET(STM32_USB_DEV_INCLUDE_DIRS ${STM32_USB_DEV_INCLUDE_DIRS} PARENT_SCOPE)

INCLUDE_DIRECTORIES(
#	${CMSIS_INCLUDE_DIRS}
#	${STM32HAL_INCLUDE_DIR}
	${STM32_USB_DEV_INCLUDE_DIRS}
)

SET(PROJECT_SOURCES
	Core/Src/usbd_core.c
	Core/Src/usbd_ctlreq.c
	Core/Src/usbd_ioreq.c
	Class/CDC/Src/usbd_cdc.c
)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${PROJECT_SOURCES})
